Bug 569668 – Don't allow changing default app for folders
2009-03-06  Alexander Larsson  <alexl@redhat.com>

        Bug 569668 – Don't allow changing default app for folders

        * src/file-manager/fm-properties-window.c:
	Don't show "open with" tab for folders. Accidentally changing
	the folder handler causes all sorts of weird issues when
	e.g. opening folders from the panel.



svn path=/trunk/; revision=15060

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-03-06  Alexander Larsson  <alexl@redhat.com>
+
+        Reviewed by NOBODY (OOPS!).
+
+        * src/file-manager/fm-properties-window.c:
+        (should_show_open_with):
+
 2009-03-05  Alexander Larsson  <alexl@redhat.com>
 
 	Bug 449397 – misinterpreted uid over ssh
