--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,16 @@
 2009-03-06  Alexander Larsson  <alexl@redhat.com>
 
-        Reviewed by NOBODY (OOPS!).
+        Bug 569668 – Don't allow changing default app for folders
 
         * src/file-manager/fm-properties-window.c:
-        (should_show_open_with):
+	Don't show "open with" tab for folders. Accidentally changing
+	the folder handler causes all sorts of weird issues when
+	e.g. opening folders from the panel.
 
 2009-03-05  Alexander Larsson  <alexl@redhat.com>
 
 	Bug 449397 – misinterpreted uid over ssh
-	
+
         * libnautilus-private/nautilus-file-private.h:
         * libnautilus-private/nautilus-file.c:
 	Use the gvfs reported owner/group names instead of the local
