--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-06  Žygimantas Beručka  <zygis@gnome.org>
+
+	* lt.po: Updated Lithuanian translation.
+
 2009-03-05  Tomasz Dominikowski  <tdominikowski@aviary.pl>
 
 	* pl.po: Updated Polish translation
