Updated German translation by Wolfgang Stöggl
svn path=/trunk/; revision=15066

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-07  Mario Blättermann <mariobl@svn.gnome.org>
+
+	* de.po: Updated German translation by Wolfgang Stöggl.
+
 2009-03-07  Ilkka Tuohela <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
