Add two comments for translators (#572158).
2009-03-08  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/file-manager/fm-properties-window.c
	(add_permissions_combo_box):
	* src/nautilus-file-management-properties.c
	(create_icon_caption_combo_box_items):
	Add two comments for translators (#572158).

svn path=/trunk/; revision=15067

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2009-03-08  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* src/file-manager/fm-properties-window.c
+	(add_permissions_combo_box):
+	* src/nautilus-file-management-properties.c
+	(create_icon_caption_combo_box_items):
+	Add two comments for translators (#572158).
+
 2009-03-07  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* libnautilus-private/nautilus-file-operations.c (get_link_name):
