Fixed Czech translation by Lucas Lommer (fixes bug #568087].
2009-03-08  Petr Kovar  <pknbe@volny.cz>

	* cs.po: Fixed Czech translation by Lucas Lommer
	(fixes bug #568087].

svn path=/trunk/; revision=15068

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-03-08  Petr Kovar  <pknbe@volny.cz>
+
+	* cs.po: Fixed Czech translation by Lucas Lommer
+	(fixes bug #568087].
+
 2009-03-07  Mario Blättermann <mariobl@svn.gnome.org>
 
 	* de.po: Updated German translation by Wolfgang Stöggl.
