Bug 574546 – Document nautilus_property_page_provider_get_pages()
2009-03-08  Sven Herzberg  <herzi@lanedo.com>

	Bug 574546 – Document nautilus_property_page_provider_get_pages()

	* libnautilus-extension/nautilus-property-page-provider.c: document
	the function
	* src/nautilus-image-properties-page.c,
	* src/nautilus-notes-viewer.c: drop the function documentation, it's
	in the API reference now

svn path=/trunk/; revision=15070

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2009-03-08  Sven Herzberg  <herzi@lanedo.com>
+
+	Bug 574546 – Document nautilus_property_page_provider_get_pages()
+
+	* libnautilus-extension/nautilus-property-page-provider.c: document
+	the function
+	* src/nautilus-image-properties-page.c,
+	* src/nautilus-notes-viewer.c: drop the function documentation, it's
+	in the API reference now
+
 2009-03-08  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* src/file-manager/fm-properties-window.c
