--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-03-09  Cosimo Cecchi  <cosimoc@pluto>
+
+	* libnautilus-private/nautilus-file-operations.c: added a translator
+	comment explaining how to handle ordinal numbers if the language
+	doesn't distinguish plural forms like 1st, 2nd, 3rd, xth (#325284).
+
 2009-03-08  Sven Herzberg  <herzi@lanedo.com>
 
 	Bug 574546 – Document nautilus_property_page_provider_get_pages()
