--- a/eel/ChangeLog
+++ b/eel/ChangeLog
@@ -1,3 +1,9 @@
+2009-03-09  Alexander Larsson  <alexl@redhat.com>
+
+        * eel-editable-label.c:
+        (eel_editable_label_move_cursor):
+	Revert wrong cursor move change.
+
 2009-02-24  Alexander Larsson  <alexl@redhat.com>
 
 	* eel-background.c (eel_background_get_image_uri):
