--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-03-09  Dwayne Bailey  <dwayne@translate.org.za>
+
+	* nso.po: Fixed broken Northern Sotho gconf translations
+	(fixes bug #569493).
+
 2009-03-08  Petr Kovar  <pknbe@volny.cz>
 
 	* cs.po: Fixed Czech translation by Lucas Lommer
