hindi updated by Rajesh Ranjan
svn path=/trunk/; revision=15076

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-10  Rajesh Ranjan <rranjan@redhat.com>
+
+	* hi.po: Updated Hindi Translation.
+	
 2009-03-09  Dwayne Bailey  <dwayne@translate.org.za>
 
 	* nso.po: Fixed broken Northern Sotho gconf translations
