--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-10  I. Felix <ifelix@redhat.com>
+
+	* ta.po:  Tamil Translation updated
+
 2009-03-10  Rajesh Ranjan <rranjan@redhat.com>
 
 	* hi.po: Updated Hindi Translation.
