--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-10  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>
+
+	* eu.po: Updated Basque translation.
+
 2009-03-10  I. Felix <ifelix@redhat.com>
 
 	* ta.po:  Tamil Translation updated
