remove this obsolete spec file.
2009-03-10  Cosimo Cecchi  <cosimoc@gnome.org>

	* Makefile.am:
	* configure.in:
	* nautilus.spec.in: remove this obsolete spec file.

svn path=/trunk/; revision=15079

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-03-10  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* Makefile.am:
+	* configure.in:
+	* nautilus.spec.in: remove this obsolete spec file.
+
 2009-03-09  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* libnautilus-private/nautilus-autorun.c:
