Updated Lithuanian translation.
2009-03-11  Gintautas Miliauskas  <gintas@akl.lt>

	* lt.po: Updated Lithuanian translation.



svn path=/trunk/; revision=15081

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,10 @@
+2009-03-11  Gintautas Miliauskas  <gintas@akl.lt>
+
+	* lt.po: Updated Lithuanian translation.
+
 2009-03-10  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
 
-	* ru.po: Updated Russian translation by Yuriy Penkin..
+	* ru.po: Updated Russian translation by Yuriy Penkin.
 
 2009-03-10  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>
 
