--- a/po/lt.po
+++ b/po/lt.po
@@ -1,30 +1,19 @@
-# #-#-#-#-#  lt.po (lt)  #-#-#-#-#
 # translation of lt.po to Lithuanian
 # Lithuanian translation of Nautilus.
 # Copyright (C) 2001-2009 Free Software Foundation, Inc.
-#
 #
 # Mantas Kriaučiūnas <mantas@akl.lt>, 2001-2004.
 # Eglė Girinaitė <egle@akl.lt>, 2001-2003.
 # Gediminas Paulauskas <menesis@chatsubo.lt>, 2001, 2004.
 # Žygimantas Beručka <zygis@gnome.org>, 2004-2009.
 # Justina Klingaitė <justina.klingaite@gmail.com>, 2005.
-# Gintautas Miliauskas <gintas@akl.lt>, 2007.
-# #-#-#-#-#  lt.po (lt)  #-#-#-#-#
-# translation of lt.po to Lithuanian
-# Lithuanian translation for the Eel library
-# Copyright (C) 2000-2006, 2008 Free Software Foundation, Inc.
-#
-#
-# Gediminas Paulauskas <menesis@delfi.lt>, 2001,2003.
-# Žygimantas Beručka <zygis@gnome.org>, 2004-2006.
-# Gintautas Miliauskas <gintas@akl.lt>, 2008.
+# Gintautas Miliauskas <gintas@akl.lt>, 2007-2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: lt\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-06 23:08+0200\n"
-"PO-Revision-Date: 2009-03-06 23:27+0200\n"
+"PO-Revision-Date: 2009-03-11 01:33+0200\n"
 "Last-Translator: Žygimantas Beručka <zygis@gnome.org>\n"
 "Language-Team: Lithuanian <gnome-lt@lists.akl.lt>\n"
 "MIME-Version: 1.0\n"
@@ -485,7 +474,7 @@ msgstr "Tolimesni klaidų pranešimai bus rodomi tik terminale."
 
 #: ../eel/eel-stock-dialogs.c:203
 msgid "You can stop this operation by clicking cancel."
-msgstr "Jūs galite sustabdyti šią operaciją paspausdami „atšaukti\"."
+msgstr "Galite sustabdyti šią operaciją paspaudę „Atsisakyti“."
 
 #: ../eel/eel-vfs-extensions.c:92
 msgid " (invalid Unicode)"
@@ -2392,7 +2381,7 @@ msgid ""
 "confirmation before replacing any files in the folder that conflict with the "
 "files being copied."
 msgstr ""
-"Šaltinio aplankas vietoje „%s“ jau egzistuoja. Suliejant jūsų bus paprašyta "
+"Šaltinio aplankas vietoje „%s“ jau egzistuoja. Suliejant bus paprašyta "
 "patvirtinti, ar norite pakeisti aplanke visus failus, kurie konfliktuoja su "
 "su kopijuojamais failais."
 
@@ -2451,7 +2440,7 @@ msgid ""
 "confirmation before replacing any files in the folder that conflict with the "
 "files being moved."
 msgstr ""
-"Šaltinio aplankas vietoje „%B“ jau egzistuoja. Suliejant jūsų bus paprašyta "
+"Šaltinio aplankas vietoje „%B“ jau egzistuoja. Suliejant bus paprašyta "
 "patvirtinti, kad norite perrašyti tame aplanke esančius failus, kurie "
 "konfliktuoja su perkeliamais failais."
 
@@ -4859,7 +4848,7 @@ msgstr "Failas, kurį nuvilkote, nėra vietinis."
 #: ../src/nautilus-information-panel.c:517
 msgid "You can only use local images as custom icons."
 msgstr ""
-"Pasirinktinėms piktogramoms galima naudoti tik jūsų kompiuteryje esančius "
+"Pasirinktinėms piktogramoms galima naudoti tik Jūsų kompiuteryje esančius "
 "paveikslėlius."
 
 #: ../src/file-manager/fm-properties-window.c:529
@@ -5135,7 +5124,7 @@ msgstr "Tekstinė išraiška:"
 
 #: ../src/file-manager/fm-properties-window.c:4802
 msgid "You are not the owner, so you cannot change these permissions."
-msgstr "Jūs nesate savininkas, todėl negalite keisti šių teisių."
+msgstr "Nesate savininkas, todėl negalite keisti šių teisių."
 
 #: ../src/file-manager/fm-properties-window.c:4826
 msgid "SELinux context:"
@@ -5401,7 +5390,7 @@ msgstr "Nepavyko pašalinti emblemos pavadinimu „%s“."
 msgid ""
 "This is probably because the emblem is a permanent one, and not one that you "
 "added yourself."
-msgstr "Tikriausiai ši emblema yra standartinė, o ne jūsų paties pridėta."
+msgstr "Tikriausiai ši emblema yra standartinė, o ne Jūsų paties pridėta."
 
 #: ../src/nautilus-emblem-sidebar.c:257
 #, c-format
@@ -6251,7 +6240,7 @@ msgstr "Rašto %s negalima ištrinti."
 
 #: ../src/nautilus-property-browser.c:932
 msgid "Check that you have permission to delete the pattern."
-msgstr "Patikrinkite, ar jūs turite teises ištrinti šį raštą."
+msgstr "Patikrinkite, ar turite teises ištrinti šį raštą."
 
 #: ../src/nautilus-property-browser.c:947
 #, c-format
@@ -6260,7 +6249,7 @@ msgstr "Emblemos %s negalima ištrinti."
 
 #: ../src/nautilus-property-browser.c:948
 msgid "Check that you have permission to delete the emblem."
-msgstr "Patikrinkite, ar jūs turite teises ištrinti šią emblemą."
+msgstr "Patikrinkite, ar turite teises ištrinti šią emblemą."
 
 #: ../src/nautilus-property-browser.c:1015
 msgid "Select an Image File for the New Emblem"
@@ -6613,7 +6602,7 @@ msgstr "Nepavyko parodyti „%s“, kadangi nepavyko rasti šio serverio."
 msgid ""
 "Check that the spelling is correct and that your proxy settings are correct."
 msgstr ""
-"Patikrinkite, ar teisingai užrašėte, ir ar teisingi jūsų tarpinės stoties "
+"Patikrinkite, ar teisingai užrašėte ir ar teisingi tarpinės stoties "
 "(proxy) parametrai."
 
 #: ../src/nautilus-window-manage-views.c:1947
@@ -6638,7 +6627,7 @@ msgid ""
 msgstr ""
 "Nautilus yra laisva programinė įranga; galite ją platinti ir / arba  "
 "modifikuoti GNU bendrosios viešosios licencijos sąlygomis, paskelbtomis "
-"Laisvosios programinės įrangos fondo; 2-osios arba (jūsų pasirinkimu) bet "
+"Laisvosios programinės įrangos fondo; 2-osios arba (Jūsų pasirinkimu) bet "
 "kurios vėlesnės licencijos versijos sąlygomis."
 
 #: ../src/nautilus-window-menus.c:502
@@ -6667,7 +6656,7 @@ msgid ""
 "Nautilus lets you organize files and folders, both on your computer and "
 "online."
 msgstr ""
-"Nautilus leidžia tvarkyti failus ir aplankus, tiek jūsų kompiuteryje, tiek "
+"Nautilus leidžia tvarkyti failus ir aplankus, tiek vietiniame kompiuteryje, tiek ir "
 "tinkle."
 
 #: ../src/nautilus-window-menus.c:521
@@ -6895,7 +6884,7 @@ msgstr "Ši_ukšlinė"
 #. tooltip
 #: ../src/nautilus-window-menus.c:823
 msgid "Open your personal trash folder"
-msgstr "Atverti jūsų asmeninį šiukšlių aplanką"
+msgstr "Atverti asmeninį šiukšlių aplanką"
 
 #. name, stock id
 #. label, accelerator
