Updated Lithuanian translation.
2009-03-11  Gintautas Miliauskas  <gintas@akl.lt>

	* lt.po: Updated Lithuanian translation.



svn path=/trunk/; revision=15082

--- a/po/lt.po
+++ b/po/lt.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: lt\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-06 23:08+0200\n"
-"PO-Revision-Date: 2009-03-11 01:33+0200\n"
+"PO-Revision-Date: 2009-03-11 01:37+0200\n"
 "Last-Translator: Žygimantas Beručka <zygis@gnome.org>\n"
 "Language-Team: Lithuanian <gnome-lt@lists.akl.lt>\n"
 "MIME-Version: 1.0\n"
@@ -1653,7 +1653,7 @@ msgstr "Naudoti _fonui"
 #: ../libnautilus-private/nautilus-dnd.c:789
 #: ../libnautilus-private/nautilus-dnd.c:842
 msgid "Cancel"
-msgstr "Atšaukti"
+msgstr "Atsisakyti"
 
 #: ../libnautilus-private/nautilus-dnd.c:830
 msgid "Set as background for _all folders"
@@ -4881,11 +4881,11 @@ msgstr "%s (%s)"
 
 #: ../src/file-manager/fm-properties-window.c:1580
 msgid "Cancel Group Change?"
-msgstr "Atšaukti grupės keitimą?"
+msgstr "Atsisakyti grupės keitimo?"
 
 #: ../src/file-manager/fm-properties-window.c:1998
 msgid "Cancel Owner Change?"
-msgstr "Atšaukti savininko keitimą?"
+msgstr "Atsisakyti savininko keitimo?"
 
 #: ../src/file-manager/fm-properties-window.c:2329
 msgid "nothing"
@@ -5238,7 +5238,7 @@ msgstr ""
 "Programinė įranga bus paleista tiesiogiai iš laikmenos „%s“. Niekada "
 "neturėtumėte paleisti nepatikimos programinės įrangos.\n"
 "\n"
-"Jeigu abejojate, spustelėkite Atšaukti."
+"Jeigu abejojate, spustelėkite „Atsisakyti“."
 
 #: ../src/nautilus-bookmarks-window.c:158
 #: ../src/nautilus-file-management-properties.c:209
