Update for release
2009-03-11  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release



svn path=/trunk/; revision=15084

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-03-11  Alexander Larsson  <alexl@redhat.com>
 
+	* NEWS:
+	Update for release
+
+2009-03-11  Alexander Larsson  <alexl@redhat.com>
+
 	Bug 529295 – Unable to unmount
 
         * libnautilus-private/nautilus-directory-async.c:
