--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-11  Krishnababu K  <kkrothap@redhat.com>
+
+	* te.po: Updated Telugu Translation.
+
 === nautilus 2.25.93 ===
 
 2009-03-11  Gintautas Miliauskas  <gintas@akl.lt>
