--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-12  Runa Bhattacharjee  <runab@redhat.com>
+
+	* bn_IN.po: Updated Bengali India Translation
+
 2009-03-11  Krishnababu K  <kkrothap@redhat.com>
 
 	* te.po: Updated Telugu Translation.
