Fixed an error on the Portuguese translation.
2009-03-12  Duarte Loreto <happyguy_pt@hotmail.com>

	* pt.po: Fixed an error on the Portuguese translation.

svn path=/trunk/; revision=15095

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-12  Duarte Loreto <happyguy_pt@hotmail.com>
+
+	* pt.po: Fixed an error on the Portuguese translation.
+
 2009-03-12  Runa Bhattacharjee  <runab@redhat.com>
 
 	* bn_IN.po: Updated Bengali India Translation
