--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-13  Rajesh Ranjan <rranjan@redhat.com>
+
+	* hi.po: Updated Hindi Translation.
+
 2009-03-13  Priit Laes  <plaes at svn dot gnome dot org>
 
 	* et.po: Translation updated by Mattias Põldaru
