--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* th.po: Updated Thai translation.
+
 2009-03-13  Rajesh Ranjan <rranjan@redhat.com>
 
 	* hi.po: Updated Hindi Translation.
