--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-14  Sandeep Shedmake  <sshedmak@redhat.com>
+
+	* mr.po: Updated Marathi Translations.
+
 2009-03-14  Krishnababu K  <kkrothap@redhat.com>
 
 	* te.po: Updated Telugu Translation.
