--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-15  Kostas Papadimas <pkst@gnome.org>
+
+	* el.po: Updated Greek Translation by Pierros Papadeas.
+
 2009-03-14  Rajesh Ranjan <rranjan@redhat.com>
 
 	* hi.po: Updated Hindi Translation.
