--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-15  Gil Forcada  <gforcada@gnome.org>
+
+	* ca.po: Updated Catalan translation by Joan Duran.
+
 2009-03-15  Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated Greek Translation by Pierros Papadeas
