--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-16  Petr Kovar  <pknbe@volny.cz>
+
+	* cs.po: Updated Czech translation by Lucas Lommer.
+
 2009-03-15  Gil Forcada  <gforcada@gnome.org>
 
 	* ca.po: Updated Catalan translation by Joan Duran.
