--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-16  Amitakhya Phukan <amitakhya@svn.gnome.org>
+
+	* as.po: Updated Assamese translations.
+
 2009-03-16  Petr Kovar  <pknbe@volny.cz>
 
 	* cs.po: Updated Czech translation by Lucas Lommer.
