Updated assamese translations
svn path=/trunk/; revision=15112

--- a/po/as.po
+++ b/po/as.po
@@ -1791,7 +1791,7 @@ msgstr[1] "আনুমানিক %'d ঘন্টা"
 #: ../libnautilus-private/nautilus-file-operations.c:354
 #, c-format
 msgid "%s"
-msgstr "S"
+msgstr "%s"
 
 #. appended to new link file
 #. Note to localizers: convert file type string for file
