Updated assamese translations
svn path=/trunk/; revision=15113

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -2,6 +2,10 @@
 
 	* as.po: Updated Assamese translations.
 
+2009-03-16  Amitakhya Phukan <amitakhya@svn.gnome.org>
+
+	* as.po: Updated Assamese translations.
+
 2009-03-16  Petr Kovar  <pknbe@volny.cz>
 
 	* cs.po: Updated Czech translation by Lucas Lommer.
