Updated Thai translation.
2009-03-16  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* th.po: Updated Thai translation.


svn path=/trunk/; revision=15114

--- a/po/th.po
+++ b/po/th.po
@@ -17,7 +17,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-13 11:40+0700\n"
-"PO-Revision-Date: 2009-03-13 12:44+0700\n"
+"PO-Revision-Date: 2009-03-16 15:33+0700\n"
 "Last-Translator: Theppitak Karoonboonyanan <thep@linux.thai.net>\n"
 "Language-Team: Thai <thai-l10n@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -4448,7 +4448,7 @@ msgstr "เรียงไอคอนให้ตรงแนว"
 
 #: src/file-manager/fm-icon-view.c:1522
 msgid "_Manually"
-msgstr "โดย_ปรับเลือกเอง"
+msgstr "จัดเรียงเ_อง"
 
 #: src/file-manager/fm-icon-view.c:1523
 msgid "Leave icons wherever they are dropped"
@@ -4464,7 +4464,7 @@ msgstr "ตาม_ขนาด"
 
 #: src/file-manager/fm-icon-view.c:1534
 msgid "By _Type"
-msgstr "ตาม_ประเภท"
+msgstr "ตาม_ชนิด"
 
 #: src/file-manager/fm-icon-view.c:1538
 msgid "By Modification _Date"
