--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-16  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* th.po: Updated Thai translation.
+
 2009-03-16  Amitakhya Phukan <amitakhya@svn.gnome.org>
 
 	* as.po: Updated Assamese translations.
