Update for release
2009-03-16  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

	* configure.in:
	Bump version to 2.26.0


svn path=/trunk/; revision=15115

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Major changes in 2.26.0 are:
+* Stable release
+* Fix crash due to broken gdk-pixbuf tga loader
+* make sure thumbnails are updated even when zoomed up
+* fix crash in media settings preferences
+
 Major changes in 2.25.93 are:
 * Use ConsoleKit to make sure we only autorun on active sessions
 * Never show unmount if we show an eject menu item
