--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-16  Ankitkumar Patel  <ankit@redhat.com>
+
+	* gu.po: Updated Gujarati Translations.
+
 2009-03-16  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* th.po: Updated Thai translation.
