Added entry for Gujarati translation update.
svn path=/trunk/; revision=15120

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -2,6 +2,10 @@
 
 	* gu.po: Updated Gujarati Translations.
 
+2009-03-16  Ankitkumar Patel  <ankit@redhat.com>
+
+	* gu.po: Updated Gujarati Translations.
+
 2009-03-16  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* th.po: Updated Thai translation.
