Post release version bump
2009-03-16  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

=== nautilus 2.26.0 ===


svn path=/trunk/; revision=15121

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -6,6 +6,8 @@
 
 	* gu.po: Updated Gujarati Translations.
 
+=== nautilus 2.26.0 ===
+
 2009-03-16  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* th.po: Updated Thai translation.
