Bug 171655 – add support for XDS (Direct Save protocol) to list view
2009-03-16  Alexander Larsson  <alexl@redhat.com>

	Bug 171655 – add support for XDS (Direct Save protocol) to list view

        * libnautilus-private/nautilus-tree-view-drag-dest.c:
	Support XDS in list view.
	Patch from Christian Neumair.



svn path=/trunk/; revision=15123

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2009-03-16  Alexander Larsson  <alexl@redhat.com>
 
+	Bug 171655 – add support for XDS (Direct Save protocol) to list view
+
+        * libnautilus-private/nautilus-tree-view-drag-dest.c:
+	Support XDS in list view.
+	Patch from Christian Neumair.
+
+2009-03-16  Alexander Larsson  <alexl@redhat.com>
+
 	Bug 523883 – Thumbnails for 200% zoom are regenerated each time a folder is opened.
 
         * libnautilus-private/nautilus-file.c:
