Fix a typo in the session loading code. Patch by Vincent Untz (#575330).
2009-03-16  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/nautilus-application.c: (nautilus_application_load_session):
	Fix a typo in the session loading code.
	Patch by Vincent Untz (#575330).

svn path=/trunk/; revision=15124

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-03-16  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* src/nautilus-application.c: (nautilus_application_load_session):
+	Fix a typo in the session loading code.
+	Patch by Vincent Untz (#575330).
+
 2009-03-16  Alexander Larsson  <alexl@redhat.com>
 
 	Bug 171655 – add support for XDS (Direct Save protocol) to list view
