--- a/eel/ChangeLog
+++ b/eel/ChangeLog
@@ -1,3 +1,8 @@
+2009-03-16  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* Makefile.am: remove -version-info LDFLAG from eel,
+	as this is not a private library anymore.
+
 === nautilus 2.26.0 ===
 === nautilus 2.25.93 ===
 
