--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-03-17  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-progress-info.c:
+	Center cancel button over progress bar, makes dialog
+	much nicer for long filenames.
+	Patch from anthony <dreadyman16@gmail.com>
+
 2009-03-16  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* libnautilus-private/Makefile.am: remove -version-info LDFLAG
