--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-17  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Updated Norwegian bokmål translation.
+
 2009-03-16  Hendrik Richter  <hendrikr@gnome.org>
 
 	* de.po: Updated German translation, fix #575448.
