--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-17  Nikos Charonitakis  <nikosx@gmail.com>
+
+	* el.po: Updated Greek translation by Pierros Papadeas.
+
 2009-03-17  Ignacio Casal Quinteiro  <icq@gnome.org>
 
 	 * gl.po: Updated Galician translation by Suso Baleato.
