--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-18  Djihed Afifi <djihed@gmail.com>
+
+	* ar.po: Updated Arabic translation by Khaled Hosny.
+
 2009-03-17  Nikos Charonitakis  <nikosx@gmail.com>
 
 	* el.po: Updated Greek translation by Pierros Papadeas.
