Correct version - localised
svn path=/trunk/; revision=15134

--- a/po/ar.po
+++ b/po/ar.po
@@ -63,7 +63,7 @@ msgstr "لا يقبل التطبيق مستندات من سطر الأوامر"
 #: ../cut-n-paste-code/libegg/eggdesktopfile.c:1168
 #, c-format
 msgid "Unrecognized launch option: %d"
-msgstr "خيار إطلاق غير معروف %s"
+msgstr "خيار إطلاق غير معروف %d"
 
 #: ../cut-n-paste-code/libegg/eggdesktopfile.c:1373
 #, c-format
