Added Crimean Tatar translation on behalf of Reşat SABIQ.
2009-03-19  Claude Paroz  <claude@2xlibre.net>

	* LINGUAS:
	* crh.po: Added Crimean Tatar translation on behalf of Reşat SABIQ.

svn path=/trunk/; revision=15137

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-03-19  Claude Paroz  <claude@2xlibre.net>
+
+	* LINGUAS:
+	* crh.po: Added Crimean Tatar translation on behalf of Reşat SABIQ.
+
 2009-03-18  Djihed Afifi <djihed@gmail.com>
 
 	* ar.po: Updated Arabic translation by Khaled Hosny.
