Don't save desktop files if nothing actually changed.
2009-03-19  Alexander Larsson  <alexl@redhat.com>

        * src/file-manager/fm-ditem-page.c:
        (item_entry_free):
        (save_entry):
        (build_table):
	Don't save desktop files if nothing actually changed.



svn path=/trunk/; revision=15138

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2009-03-19  Alexander Larsson  <alexl@redhat.com>
+
+        * src/file-manager/fm-ditem-page.c:
+        (item_entry_free):
+        (save_entry):
+        (build_table):
+	Don't save desktop files if nothing actually changed.
+
 2009-03-18  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* libnautilus-private/nautilus-icon-container.c:
