Report error for failed mounts. c
2009-03-19  Alexander Larsson  <alexl@redhat.com>

	
        * src/file-manager/fm-directory-view.c:
	Report error for failed mounts.
c

svn path=/trunk/; revision=15139

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-03-19  Alexander Larsson  <alexl@redhat.com>
 
+	
+        * src/file-manager/fm-directory-view.c:
+	Report error for failed mounts.
+
+2009-03-19  Alexander Larsson  <alexl@redhat.com>
+
         * src/file-manager/fm-ditem-page.c:
         (item_entry_free):
         (save_entry):
