Always synchronize the location bar button with the pathbar mode. Patch by
2009-03-19  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/nautilus-navigation-window.c:
	(always_use_location_entry_changed),
	(nautilus_navigation_window_set_bar_mode):
	Always synchronize the location bar button with the pathbar
	mode. Patch by Paweł Paprota (#416891).

svn path=/trunk/; revision=15140

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2009-03-19  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* src/nautilus-navigation-window.c:
+	(always_use_location_entry_changed),
+	(nautilus_navigation_window_set_bar_mode):
+	Always synchronize the location bar button with the pathbar
+	mode. Patch by Paweł Paprota (#416891).
+
 2009-03-19  Alexander Larsson  <alexl@redhat.com>
 
 	
