Update mime types handled by totem-audio-preview. Patch by Bastien Nocera
2009-03-19  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/file-manager/nautilus-audio-mime-types.h:
	Update mime types handled by totem-audio-preview.
	Patch by Bastien Nocera (#575345).

svn path=/trunk/; revision=15141

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-03-19  Cosimo Cecchi  <cosimoc@gnome.org>
 
+	* src/file-manager/nautilus-audio-mime-types.h:
+	Update mime types handled by totem-audio-preview.
+	Patch by Bastien Nocera (#575345).
+
+2009-03-19  Cosimo Cecchi  <cosimoc@gnome.org>
+
 	* src/nautilus-navigation-window.c:
 	(always_use_location_entry_changed),
 	(nautilus_navigation_window_set_bar_mode):
